[package]
name = "grinswap"
version = "0.1.0"
authors = ["vault713 <hello@713.mw>"]
description = "Grin cross-chain atomic swaps"
keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency", "atomic swap", "scriptless scripts" ]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
bitcoin = { version = "0.19", git = "https://github.com/jaspervdm/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }
bitcoin_hashes = "0.7"
blake2-rfc = "0.2"
byteorder = "1.3"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
failure_derive = "0.1"
hex = "0.3"
lazy_static = "1.4"
parking_lot = "0.6"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.8"
uuid = { version = "0.7", features = ["serde", "v4"] }

grin_core = "2.1.0"
grin_keychain = "2.1.0"
grin_store = "2.1.0"
grin_util = "2.1.0"
grin_wallet_libwallet = "2.1.0"

[patch.crates-io]
grin_secp256k1zkp = { git = "https://github.com/jaspervdm/rust-secp256k1-zkp", branch = "master" }